--- a/style/form.css
+++ b/style/form.css
@@ -65,3 +65,14 @@
   border-bottom: solid 1px #999;
   border-left: none;
 }
+
+/* search */
+.search-box {
+  max-width: 300px;
+  margin-bottom: 20px;
+}
+
+.search-box form {
+  display: flex;
+  gap: 20px;
+}
