--- a/style/common.css
+++ b/style/common.css
@@ -1,7 +1,12 @@
 html, body {
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   background: #ffd700;
+}
+
+a {
+  color: #333;
 }
 
 #page {
@@ -19,7 +24,6 @@ h1 {
 }
 
 h1 a {
-  color: #333;
   text-decoration: none;
 }
 
@@ -45,7 +49,6 @@ h1 a {
 }
 
 #top-navigation a {
-  color: #333;
   text-decoration: none;
 }
 
